# ConeDetection

./: .gitignore  README.md  README_cn.md
install_scripts/: install_ppyolo.sh
src/ppyolo/: CMakeLists.txt  package.xml  setup.py
src/ppyolo/config/: ppyolo.yaml
src/ppyolo/launch/: ppyolo.launch
src/ppyolo/scripts/: camera.py  download_model.sh  pp_infer.py  pp_infer_remake.py  trans.py
